# compliance_copilot_prototype

./: LICENSE  README.md
copilot-prototype/: doc_upload.py  ingestion.py  main.py  pyproject.toml
copilot-prototype/backend/: core.py
copilot-prototype/backend/vector_databases/NIST.IR.8270.pdf/: chroma.sqlite3
copilot-prototype/copilot_prototype/: core.py  ingestion.py
copilot-prototype/vector_databases/NIST.IR.8270.pdf/: chroma.sqlite3
